--- a/index.html
+++ b/index.html
@@ -8,215 +8,8 @@
       src="https://kit.fontawesome.com/f1303d4da7.js"
       crossorigin="anonymous"
     ></script>
-    <style>
-      #navbar {
-        display: flex;
-        justify-content: space-between;
-
-        background-color: rgb(56, 55, 55);
-        color: white;
-        font-weight: bold;
-        height: 60px;
-        width: 100%;
-      }
-
-      #left {
-        display: flex;
-        gap: 25px;
-        align-items: center;
-        margin-left: 150px;
-      }
-
-      #left > div:hover {
-        cursor: pointer;
-        color: rgb(171, 159, 216);
-      }
-
-      #right {
-        display: flex;
-        gap: 25px;
-        align-items: center;
-        margin-right: 0px;
-      }
-
-      #right > div:hover {
-        cursor: pointer;
-      }
-
-      #right > div:first-child {
-        border: 1px solid white;
-        padding: 10px;
-        border-radius: 10px;
-      }
-
-      #left > div:first-child > img {
-        width: 40px;
-        align-content: center;
-      }
-
-      #content > div {
-        width: 100%;
-        padding: 2px;
-        height: 500px;
-        background-image: url(https://cdn.sanity.io/images/qa41whrn/prod/787f36894d0ad2b3c07d2ae48ca3f9c9131dc94b-6000x2167.jpg);
-        background-size: cover;
-      }
-
-      #content > div > div:nth-child(1) {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        margin-top: 200px;
-      }
-
-      #content > div > div:nth-child(2) {
-        display: flex;
-        justify-content: flex-end;
-        padding: 10px;
-      }
-
-      .discount > h2,
-      p {
-        padding-right: 10px;
-        color: white;
-        font-size: medium;
-      }
-
-      #content > div > div:nth-child(2) > div {
-        margin: 10px;
-        background-color: white;
-        padding: 10px;
-        font-weight: bold;
-        font-size: smaller;
-      }
-
-      #product {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(auto);
-        margin-top: 10px;
-        width: auto;
-        align-items: center;
-        margin: auto;
-        padding: 10px;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-      }
-
-      #product > div {
-        margin: 30px;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-      }
-
-      #product > div > img {
-        height: 90%;
-        width: 100%;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-      }
-
-      .details {
-        display: flex;
-        width: 100%;
-        justify-content: space-around;
-        align-items: center;
-      
-      }
-
-      .details > div > p {
-        color: red;
-
-      }
-      .details div{
-        padding: 5px;
-      }
-
-      .palermo > div {
-        display: flex;
-        justify-content: center;
-      }
-
-      .palermo > div > p {
-        color: gray;
-      }
-
-      .street {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(1, auto);
-        height: 450px;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        flex-wrap: wrap;
-        padding: 20px;
-      }
-
-      .street > div {
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        margin: 10px;
-        height: 300px;
-      }
-
-      .street > div > div > div {
-        display: flex;
-        justify-content: center;
-      }
-
-      .button {
-        background-color: black;
-        color: white;
-        font-weight: bold;
-        padding: 10px;
-        border-radius: 10px;
-        align-items: center;
-      }
-
-      .img {
-        width: 100%;
-      }
-
-      @media screen and (min-width: 300px) and (max-width: 500px) {
-        #content > div {
-          width: 100%;
-          height: 200px;
-        }
-        .street {
-          width: 100%;
-          display: grid;
-          grid-template-columns: repeat(2, 1fr);
-          height: 250px;
-        }
-        #product {
-          width: 100%;
-          display: grid;
-          grid-template-columns: repeat(2, 1fr);
-          height: 100px;
-        }
-        .palermo {
-          font-size: x-small;
-        }
-      }
-
-      #footer {
-        display: flex;
-
-        margin-top: 100px;
-        justify-content: space-evenly;
-        font-weight: bold;
-        background-color: black;
-      }
-
-      #footer > div {
-        padding: 10px;
-        margin: 5px;
-        color: white;
-      }
-
-      #footer > div > div {
-        padding: 10px;
-      }
-
-      #footer > div > div:hover {
-        cursor: pointer;
-      }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
